--- a/card-details.html
+++ b/card-details.html
@@ -28,14 +28,14 @@
 
     <!-- Navbar -->
     <header class="bg-black shadow-md py-6 sm:px-12 px-3 flex justify-between items-center">
-        <div class="flex items-center gap-2">
+        <a href="/" class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth="1.5"
                 stroke="currentColor" class="w-6 h-6 text-blue-300">
                 <path strokeLinecap="round" strokeLinejoin="round"
                     d="M13.19 8.688a4.5 4.5 0 0 1 1.242 7.244l-4.5 4.5a4.5 4.5 0 0 1-6.364-6.364l1.757-1.757m13.35-.622 1.757-1.757a4.5 4.5 0 0 0-6.364-6.364l-4.5 4.5a4.5 4.5 0 0 0 1.242 7.244" />
             </svg>
             <h1 class="text-xl font-bold text-blue-300">Connect</h1>
-        </div>
+        </a>
 
         <button type="button" class="p-3 rounded-md bg-white px-6 text-sm font-medium">
             Login / Register
