--- a/card-details.html
+++ b/card-details.html
@@ -22,9 +22,11 @@
             }
         }
     </script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body class="bg-gray-50 font-sans">
+
 
     <!-- Navbar -->
     <header class="bg-black shadow-md py-6 sm:px-12 px-3 flex justify-between items-center">
@@ -37,91 +39,52 @@
             <h1 class="text-xl font-bold text-blue-300">Connect</h1>
         </a>
 
-        <button type="button" class="p-3 rounded-md bg-white px-6 text-sm font-medium">
+        <button onclick="location.replace('dashboard.php')" type="button"
+            class="p-3 rounded-md bg-white px-6 text-sm font-medium">
             Login / Register
         </button>
     </header>
 
+    <div id="loadingSpinner"
+        class="container mx-auto mt-32 rounded-xl shadow-lg p-8 flex items-center flex-col justify-center gap-4">
+
+        <i class="fas fa-spinner fa-spin text-3xl"></i>
+
+        <p>Loading Data...</p>
+
+    </div>
+
     <!-- MAIN CARD SECTION -->
-    <div class="container mx-auto mt-32 bg-white rounded-xl shadow-lg p-8">
+    <div id="dataContainer" class="container hidden mx-auto mt-32 bg-white rounded-xl shadow-lg p-8">
         <div class="flex flex-col md:flex-row items-center md:items-start gap-10">
 
             <!-- LEFT SIDE -->
             <div class="flex flex-col items-center md:items-start md:w-1/3">
-                <div class="relative w-48 h-48">
-    <img src="./images/avatar1.jpg"
-        class="w-full h-full rounded-full object-cover shadow-lg border-4 border-gray-50 bg-white" />
+                <div id="avatarImgContainer" class="relative w-48 h-48">
 
-    <!-- Expand Button -->
-    <button 
-        onclick="openImageModal('./images/avatar1.jpg')"
-        class="absolute bottom-2 right-2 bg-primary text-white p-2 rounded-full shadow-md hover:bg-indigo-600 transition">
-        <!-- Icon -->
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5m1 11h4m0 0v-4m0 4l-5-5M4 16H4m0 0v4m0-4l5 5"/>
-        </svg>
-    </button>
-</div>
+                    <!-- Expand Button -->
+                    <button onclick="openImageModal('./images/avatar1.jpg')"
+                        class="absolute bottom-2 right-2 bg-primary text-white p-2 rounded-full shadow-md hover:bg-indigo-600 transition">
+                        <!-- Icon -->
+                        <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5m1 11h4m0 0v-4m0 4l-5-5M4 16H4m0 0v4m0-4l5 5" />
+                        </svg>
+                    </button>
+                </div>
 
 
                 <!-- Social Links -->
-                <div class="flex flex-col mt-6 gap-3">
-                    <a href="#" class="flex items-center gap-2 text-primary hover:text-blue-500">
-                        Instagram
-                    </a>
-                    <a href="#" class="flex items-center gap-2 text-blue-700 hover:underline">
-                        LinkedIn
-                    </a>
-                    <a href="#" class="flex items-center gap-2 text-gray-800 hover:underline">
-                        GitHub
-                    </a>
-                    <a href="#" class="flex items-center gap-2 text-blue-400 hover:underline">
-                        Twitter
-                    </a>
+                <div id="cardLinks" class="flex flex-col mt-6 gap-3">
                 </div>
             </div>
 
             <!-- RIGHT SIDE -->
-            <div class="md:w-2/3">
-                <h1 class="text-4xl font-bold">John Doe</h1>
-                <p class="text-xl text-secondary mt-2">Freelance / UX Designer</p>
+            <div id="dataFlow" class="md:w-2/3">
 
-                <!-- Location -->
-                <p class="flex items-center text-secondary mt-4 gap-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-secondary" fill="none"
-                        viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M12 11c1.5 0 3-2 3-3s-1.5-3-3-3-3 1.5-3 3 1.5 3 3 3z" />
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M12 11c-4 0-7 3-7 7h14c0-4-3-7-7-7z" />
-                    </svg>
-                    London, UK
-                </p>
 
-                <!-- Contact Details -->
-                <div class="mt-6 space-y-2 text-secondary">
-                    <p><span class="font-semibold">Email:</span> john.doe@example.com</p>
-                    <p><span class="font-semibold">Phone:</span> +44 123 456 7890</p>
-                    <p><span class="font-semibold">Website:</span> www.johndoe.com</p>
-                </div>
 
-                <!-- Bio -->
-                <p class="text-secondary mt-6 text-lg leading-relaxed">
-                    Freelance designer creating digital experiences. Passionate about UI/UX, accessibility, and
-                    building digital tools that simplify life. Collaborates with developers, agencies, and startups to
-                    build modern product experiences.
-                </p>
-
-                <!-- ACTION BUTTONS -->
-                <div class="flex gap-4 mt-8">
-                    <button class="bg-primary text-white px-6 py-3 rounded-lg hover:bg-indigo-600">
-                        Copy Link
-                    </button>
-                    <button class="bg-gray-100 text-secondary px-6 py-3 rounded-lg hover:bg-gray-200">
-                        QR Code
-                    </button>
-                </div>
             </div>
         </div>
     </div>
@@ -131,34 +94,14 @@
         <div class="bg-primary text-white py-10 px-6 rounded-xl shadow-lg text-center">
             <h2 class="text-3xl font-bold mb-3">Create Your Own Digital Card</h2>
             <p class="text-white/80 text-lg mb-6">
-                Showcase your identity, profession, and social links with one shareable link. It’s fast, modern, and customizable.
+                Showcase your identity, profession, and social links with one shareable link. It’s fast, modern, and
+                customizable.
             </p>
-            <a href="#" class="bg-white text-primary px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">
+            <a href="dashboard.php" class="bg-white text-primary px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">
                 Get Started — It's Free
             </a>
         </div>
     </div>
-
-    <!-- REACH OUT SECTION -->
-    <!-- <div class="container mx-auto mt-16 bg-white rounded-xl shadow-lg p-8">
-        <h3 class="text-2xl font-bold mb-4">Reach Out</h3>
-        <p class="text-secondary mb-6">Send a quick message to John.</p>
-
-        <form class="space-y-4">
-            <input type="text" placeholder="Your Name"
-                class="w-full p-3 border rounded-lg focus:ring-primary focus:border-primary">
-
-            <input type="email" placeholder="Your Email"
-                class="w-full p-3 border rounded-lg focus:ring-primary focus:border-primary">
-
-            <textarea placeholder="Your Message"
-                class="w-full p-3 border rounded-lg h-32 focus:ring-primary focus:border-primary"></textarea>
-
-            <button class="bg-primary text-white px-6 py-3 rounded-lg hover:bg-indigo-600 w-full">
-                Send Message
-            </button>
-        </form>
-    </div> -->
 
     <!-- SUGGESTED PROFILES -->
     <div class="container mx-auto mt-16">
@@ -196,8 +139,14 @@
             <p class="text-secondary text-sm mb-4">Let others connect with John easily.</p>
 
             <div class="flex justify-center gap-4">
-                <button class="bg-primary text-white px-5 py-2 rounded-lg">Copy Link</button>
-                <button class="bg-white border px-5 py-2 rounded-lg">QR Code</button>
+                <button onclick="share()"
+                    class="bg-primary text-white px-5 py-2 rounded-lg flex items-center justify-center gap-2">
+                    <i class="fas fa-share"></i>
+                    <span>Share Link</span>
+                </button>
+                <button class="bg-white border px-5 py-2 rounded-lg flex items-center justify-center gap-2">
+                    <i class="fas fa-qrcode"></i>
+                    <span>QR Code</span></button>
             </div>
         </div>
     </div>
@@ -205,7 +154,8 @@
     <!-- ABOUT PLATFORM -->
     <div class="container mx-auto mt-20 text-center text-secondary text-sm">
         <p>
-            Connect is a digital networking platform helping individuals share professional identities through modern, personalized digital cards.
+            Connect is a digital networking platform helping individuals share professional identities through modern,
+            personalized digital cards.
         </p>
     </div>
 
@@ -215,6 +165,168 @@
             &copy; 2025 Connect. All rights reserved.
         </div>
     </footer>
+
+
+    <script>
+        // Get card ID from URL
+        const urlParams = new URLSearchParams(window.location.search);
+        const cardId = urlParams.get('cardid');
+
+        function renderData(cardData) {
+            const cardLinks = document.getElementById("cardLinks")
+            const avatarImgContainer = document.getElementById("avatarImgContainer")
+
+            const dataFlow = document.getElementById("dataFlow")
+
+            const loadingSpinner = document.getElementById("loadingSpinner")
+
+            const dataContainer = document.getElementById("dataContainer")
+
+            setTimeout(() => {
+                loadingSpinner.classList.remove("flex")
+                loadingSpinner.classList.add("hidden")
+
+                dataContainer.classList.remove("hidden")
+            }, 1000);
+
+            const socialLinks = JSON.parse(cardData.social_links)
+
+            // console.log(socialLinks)
+
+            dataFlow.innerHTML = `
+             <h1 class="text-4xl font-bold">${cardData.name}</h1>
+                <p class="text-xl text-secondary mt-2"><span class="uppercase text-sm font-bold">${cardData.card_type}</span> / <span class="text-sm"> ${cardData.title_role} </span></p>
+
+                <!-- Location -->
+                <p class="flex items-center text-secondary mt-4 gap-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-secondary" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M12 11c1.5 0 3-2 3-3s-1.5-3-3-3-3 1.5-3 3 1.5 3 3 3z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 11c-4 0-7 3-7 7h14c0-4-3-7-7-7z" />
+                    </svg>
+                    ${cardData.address ? cardData.address : 'N/A'}
+                </p>
+
+                <!-- Contact Details -->
+                <div class="mt-6 space-y-2 text-secondary">
+                    <p><span class="font-semibold">Email:</span> ${cardData.email}</p>
+                    <p><span class="font-semibold">Phone:</span> ${cardData.phone}</p>
+                    <p><span class="font-semibold">Website:</span> ${socialLinks.website ? socialLinks.website : 'N/A'}</p>
+                </div>
+
+                <!-- Bio -->
+                <p class="text-secondary mt-6 text-lg leading-relaxed">
+                    ${cardData.bio}
+                </p>
+
+ <!-- ACTION BUTTONS -->
+                <div class="flex gap-4 mt-8">
+                    <button onClick="share()" class="bg-primary text-white px-6 py-3 rounded-lg hover:bg-indigo-600 flex items-center justify-center gap-2">
+                        <i class="fas fa-share"> </i>
+                       <span>Share Link</span>
+                    </button>
+                    <button class="bg-gray-100 text-secondary px-6 py-3 rounded-lg hover:bg-gray-200 flex items-center justify-center gap-2">
+                        <i class="fas fa-qrcode"></i>
+                        <span>QR Code</span>
+                    </button>
+                </div>
+            `
+
+            avatarImgContainer.innerHTML += `<img id="avatarImg" src="${cardData.profile_image}"
+                        class="w-full h-full rounded-full object-cover shadow-lg border-4 border-gray-50 bg-white" />  `
+
+
+            for (const key in socialLinks) {
+                cardLinks.innerHTML += `<a href="${socialLinks[key]}" class="flex gap-1 text-primary hover:text-blue-500 flex-col">
+                    <span class="uppercase font-bold text-xs">${key}:</span>
+                        <span>${socialLinks[key] ? socialLinks[key] : 'N/A'} </span>
+                </a>`
+            }
+        }
+
+        async function fetchCard() {
+
+            if (!cardId) {
+                return alert('card id not found!')
+            }
+
+            const res = await fetch(`api/api.php?route=getCard&id=${cardId}`)
+            if (!res.ok) {
+                // error here
+            }
+
+            const data = await res.json()
+            const cardData = data.card
+
+            renderData(cardData)
+
+            // console.log(cardData)
+
+        }
+
+        fetchCard()
+
+
+
+        // Function to handle the sharing of a specific card link
+        function share() {
+            if (!cardId) {
+                alert("Error: Card ID is missing.");
+                return;
+            }
+
+            // 1. Determine the base URL
+            // window.location.origin provides the protocol + hostname + port (e.g., https://yourdomain.com)
+            const baseUrl = window.location.origin;
+
+            // Determine the path to the card details page.
+            // Assuming your card details view is accessible at /card.html or /your-app-root/card.html
+
+            // We will assume the base path is /card.html relative to the domain root
+            // ADJUST THIS PATH: Ensure '/card.html' is the correct file path relative to your domain root.
+            const cardPath = '/card-details.html';
+
+            // 2. Construct the full public URL using your parameter structure
+            const cardUrl = `${baseUrl}${cardPath}?cardid=${cardId}`;
+
+            // 3. Attempt to copy the URL to the clipboard (Modern approach with fallback)
+            if (navigator.clipboard && navigator.clipboard.writeText) {
+                navigator.clipboard.writeText(cardUrl)
+                    .then(() => {
+                        alert("Success! Card link copied to clipboard:\n" + cardUrl);
+                    })
+                    .catch(err => {
+                        console.error('Could not copy text via Clipboard API:', err);
+                        promptForCopy(cardUrl);
+                    });
+            } else {
+                // Fallback for older browsers
+                promptForCopy(cardUrl);
+            }
+        }
+
+        // Fallback method for copying the URL (remains the same)
+        function promptForCopy(url) {
+            const tempInput = document.createElement('textarea');
+            tempInput.value = url;
+            document.body.appendChild(tempInput);
+
+            tempInput.select();
+            tempInput.setSelectionRange(0, 99999);
+
+            try {
+                document.execCommand('copy');
+                alert("Success! Card link copied to clipboard:\n" + url);
+            } catch (err) {
+                alert("Could not automatically copy the link. Please copy it manually:\n" + url);
+            }
+
+            document.body.removeChild(tempInput);
+        }
+
+
+    </script>
 
 </body>
 
