--- a/card-details.html
+++ b/card-details.html
@@ -30,7 +30,7 @@
 
     <!-- Navbar -->
     <header class="bg-black shadow-md py-6 sm:px-12 px-3 flex justify-between items-center">
-        <a href="/" class="flex items-center gap-2">
+        <a href="#" class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth="1.5"
                 stroke="currentColor" class="w-6 h-6 text-blue-300">
                 <path strokeLinecap="round" strokeLinejoin="round"
@@ -266,6 +266,40 @@
         }
 
         fetchCard()
+
+        // Function to log the card view by incrementing the counter
+    async function incrementCardView() {
+
+        if (!cardId) {
+            console.warn("View counting skipped: cardid not found in URL.");
+            return;
+        }
+
+        const formData = new FormData();
+        formData.append('card_id', cardId);
+
+        try {
+            // CRITICAL: Call the new INCREMENT endpoint
+            const response = await fetch("api/api.php?route=increment", { 
+                method: 'POST',
+                body: formData
+            });
+
+            const result = await response.json();
+
+            if (result.success) {
+                console.log(`Card view counter incremented for ID: ${cardId}`);
+            } else {
+                console.warn(`Failed to increment view count: ${result.message}`);
+            }
+
+        } catch (error) {
+            console.error('View counting network error:', error);
+        }
+    }
+
+    // Execute the counting function immediately when the DOM is ready
+    document.addEventListener("DOMContentLoaded", incrementCardView);
 
 
 
